// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipse2d snapshots should match SVG path data snapshots: ellipse-svg-path-first 1`] = `"M0,30 a50,30,0,1,1,100,0a50,30,0,1,1,-100,0"`;

exports[`Ellipse2d snapshots should match SVG path data snapshots: ellipse-svg-path-not-first 1`] = `" a50,30,0,1,1,100,0a50,30,0,1,1,-100,0"`;

exports[`Ellipse2d snapshots should match bounds snapshots: circle-bounds 1`] = `
Box {
  "h": 80,
  "w": 80,
  "x": 0,
  "y": 0,
}
`;

exports[`Ellipse2d snapshots should match bounds snapshots: ellipse-bounds 1`] = `
Box {
  "h": 60,
  "w": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`Ellipse2d snapshots should match circle SVG path data snapshot: circle-svg-path 1`] = `"M0,40 a40,40,0,1,1,80,0a40,40,0,1,1,-80,0"`;

exports[`Ellipse2d snapshots should match circle vertices snapshot: circle-vertices 1`] = `
[
  Vec {
    "x": 80,
    "y": 40,
    "z": 1,
  },
  Vec {
    "x": 76.95518130045147,
    "y": 55.30733729460359,
    "z": 1,
  },
  Vec {
    "x": 68.2842712474619,
    "y": 68.2842712474619,
    "z": 1,
  },
  Vec {
    "x": 55.307337294603585,
    "y": 76.95518130045147,
    "z": 1,
  },
  Vec {
    "x": 39.99999999999999,
    "y": 80,
    "z": 1,
  },
  Vec {
    "x": 24.692662705396405,
    "y": 76.95518130045147,
    "z": 1,
  },
  Vec {
    "x": 11.71572875253809,
    "y": 68.2842712474619,
    "z": 1,
  },
  Vec {
    "x": 3.0448186995485287,
    "y": 55.307337294603585,
    "z": 1,
  },
  Vec {
    "x": 0,
    "y": 39.99999999999999,
    "z": 1,
  },
  Vec {
    "x": 3.044818699548536,
    "y": 24.6926627053964,
    "z": 1,
  },
  Vec {
    "x": 11.715728752538105,
    "y": 11.71572875253809,
    "z": 1,
  },
  Vec {
    "x": 24.69266270539642,
    "y": 3.0448186995485287,
    "z": 1,
  },
  Vec {
    "x": 40.000000000000014,
    "y": 0,
    "z": 1,
  },
  Vec {
    "x": 55.3073372946036,
    "y": 3.044818699548536,
    "z": 1,
  },
  Vec {
    "x": 68.2842712474619,
    "y": 11.715728752538112,
    "z": 1,
  },
  Vec {
    "x": 76.95518130045147,
    "y": 24.692662705396422,
    "z": 1,
  },
]
`;

exports[`Ellipse2d snapshots should match elongated ellipse snapshots: elongated-ellipse 1`] = `
{
  "bounds": Box {
    "h": 40,
    "w": 200,
    "x": 0,
    "y": 0,
  },
  "length": 420.20053303118686,
  "svgPath": "M0,20 a100,20,0,1,1,200,0a100,20,0,1,1,-200,0",
  "vertices": [
    Vec {
      "x": 200,
      "y": 20,
      "z": 1,
    },
    Vec {
      "x": 196.59258262890683,
      "y": 25.176380902050415,
      "z": 1,
    },
    Vec {
      "x": 186.60254037844388,
      "y": 30,
      "z": 1,
    },
    Vec {
      "x": 170.71067811865476,
      "y": 34.14213562373095,
      "z": 1,
    },
    Vec {
      "x": 150,
      "y": 37.32050807568877,
      "z": 1,
    },
    Vec {
      "x": 125.8819045102521,
      "y": 39.31851652578136,
      "z": 1,
    },
    Vec {
      "x": 100.00000000000003,
      "y": 40,
      "z": 1,
    },
    Vec {
      "x": 74.11809548974794,
      "y": 39.31851652578137,
      "z": 1,
    },
    Vec {
      "x": 50.00000000000002,
      "y": 37.32050807568878,
      "z": 1,
    },
    Vec {
      "x": 29.28932188134526,
      "y": 34.14213562373096,
      "z": 1,
    },
    Vec {
      "x": 13.397459621556138,
      "y": 30.000000000000007,
      "z": 1,
    },
    Vec {
      "x": 3.4074173710931746,
      "y": 25.176380902050425,
      "z": 1,
    },
    Vec {
      "x": 0,
      "y": 20.00000000000001,
      "z": 1,
    },
    Vec {
      "x": 3.407417371093132,
      "y": 14.823619097949592,
      "z": 1,
    },
    Vec {
      "x": 13.39745962155608,
      "y": 10.000000000000007,
      "z": 1,
    },
    Vec {
      "x": 29.289321881345188,
      "y": 5.8578643762690525,
      "z": 1,
    },
    Vec {
      "x": 49.999999999999936,
      "y": 2.679491924311229,
      "z": 1,
    },
    Vec {
      "x": 74.11809548974786,
      "y": 0.6814834742186306,
      "z": 1,
    },
    Vec {
      "x": 99.99999999999993,
      "y": 0,
      "z": 1,
    },
    Vec {
      "x": 125.88190451025201,
      "y": 0.68148347421862,
      "z": 1,
    },
    Vec {
      "x": 149.99999999999997,
      "y": 2.679491924311211,
      "z": 1,
    },
    Vec {
      "x": 170.71067811865476,
      "y": 5.857864376269031,
      "z": 1,
    },
    Vec {
      "x": 186.60254037844388,
      "y": 9.99999999999998,
      "z": 1,
    },
    Vec {
      "x": 196.59258262890685,
      "y": 14.823619097949566,
      "z": 1,
    },
  ],
}
`;

exports[`Ellipse2d snapshots should match perimeter calculations snapshot: perimeter-calculations 1`] = `
{
  "circleLength": 251.32741228718345,
  "ellipseLength": 255.2699886278876,
}
`;

exports[`Ellipse2d snapshots should match small ellipse snapshots: small-ellipse 1`] = `
{
  "bounds": Box {
    "h": 6,
    "w": 10,
    "x": 0,
    "y": 0,
  },
  "length": 25.526998862788762,
  "svgPath": "M0,3 a5,3,0,1,1,10,0a5,3,0,1,1,-10,0",
  "vertices": [
    Vec {
      "x": 10,
      "y": 3,
      "z": 1,
    },
    Vec {
      "x": 9.330127018922195,
      "y": 4.5,
      "z": 1,
    },
    Vec {
      "x": 7.500000000000001,
      "y": 5.598076211353316,
      "z": 1,
    },
    Vec {
      "x": 5.000000000000002,
      "y": 6,
      "z": 1,
    },
    Vec {
      "x": 2.5000000000000013,
      "y": 5.598076211353316,
      "z": 1,
    },
    Vec {
      "x": 0.6698729810778072,
      "y": 4.500000000000002,
      "z": 1,
    },
    Vec {
      "x": 0,
      "y": 3.0000000000000018,
      "z": 1,
    },
    Vec {
      "x": 0.6698729810778055,
      "y": 1.5000000000000018,
      "z": 1,
    },
    Vec {
      "x": 2.4999999999999964,
      "y": 0.4019237886466853,
      "z": 1,
    },
    Vec {
      "x": 4.999999999999996,
      "y": 0,
      "z": 1,
    },
    Vec {
      "x": 7.4999999999999964,
      "y": 0.40192378864668266,
      "z": 1,
    },
    Vec {
      "x": 9.330127018922191,
      "y": 1.4999999999999973,
      "z": 1,
    },
  ],
}
`;

exports[`Ellipse2d snapshots should match transformed ellipse snapshots: transformed-ellipse-bounds 1`] = `
{
  "rotatedBounds": Box {
    "h": 81.56403124820474,
    "w": 81.56403124820473,
    "x": -26.63988000037141,
    "y": 15.786526870821433,
  },
  "scaledBounds": Box {
    "h": 120,
    "w": 200,
    "x": 0,
    "y": 0,
  },
  "translatedBounds": Box {
    "h": 60,
    "w": 100,
    "x": 50,
    "y": 30,
  },
}
`;

exports[`Ellipse2d snapshots should match vertices snapshots: ellipse-vertices 1`] = `
[
  Vec {
    "x": 100,
    "y": 30,
    "z": 1,
  },
  Vec {
    "x": 96.19397662556435,
    "y": 41.48050297095269,
    "z": 1,
  },
  Vec {
    "x": 85.35533905932738,
    "y": 51.21320343559643,
    "z": 1,
  },
  Vec {
    "x": 69.13417161825448,
    "y": 57.7163859753386,
    "z": 1,
  },
  Vec {
    "x": 49.99999999999999,
    "y": 60,
    "z": 1,
  },
  Vec {
    "x": 30.865828381745505,
    "y": 57.7163859753386,
    "z": 1,
  },
  Vec {
    "x": 14.644660940672615,
    "y": 51.21320343559643,
    "z": 1,
  },
  Vec {
    "x": 3.806023374435661,
    "y": 41.480502970952685,
    "z": 1,
  },
  Vec {
    "x": 0,
    "y": 29.999999999999996,
    "z": 1,
  },
  Vec {
    "x": 3.806023374435668,
    "y": 18.5194970290473,
    "z": 1,
  },
  Vec {
    "x": 14.64466094067263,
    "y": 8.78679656440357,
    "z": 1,
  },
  Vec {
    "x": 30.865828381745526,
    "y": 2.283614024661393,
    "z": 1,
  },
  Vec {
    "x": 50.000000000000014,
    "y": 0,
    "z": 1,
  },
  Vec {
    "x": 69.1341716182545,
    "y": 2.2836140246614,
    "z": 1,
  },
  Vec {
    "x": 85.35533905932738,
    "y": 8.786796564403584,
    "z": 1,
  },
  Vec {
    "x": 96.19397662556435,
    "y": 18.51949702904732,
    "z": 1,
  },
]
`;
